# scraping-wikipedia-video-games

./: README.md  Scrape video games from Wikipedia.ipynb  config.ini  pyproject.toml
data/: best_selling.csv  best_selling.json  most_played.csv  most_played.json
data/raw/: best_selling.html  most_played.html
