[tool.poetry]
name = "video-games"
version = "0.1.0"
description = ""
authors = ["Michael Nowak <mcnnowak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
bs4 = "^0.0.1"
pandas = "^1.2.0"
numpy = "^1.19.4"
jupyter = "^1.0.0"
matplotlib = "^3.3.3"
seaborn = "^0.11.1"
scikit-learn = "^0.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
